feat: enhance Windows installer with app versioning, uninstall cleanup and process termination

--- a/.github/workflows/generator-windows.yml
+++ b/.github/workflows/generator-windows.yml
@@ -877,6 +877,7 @@ jobs:
               $innoScript += "AppName=$myappname`r`n"
               $innoScript += "AppVersion=$version`r`n"
               $innoScript += "AppPublisher=$manufacturer`r`n"
+              $innoScript += "AppId={{$myappname-$(Get-Random -Minimum 10000000 -Maximum 99999999)}`r`n"
               $innoScript += "DefaultDirName={autopf}\$myappname`r`n"
               $innoScript += "DefaultGroupName=$myappname`r`n"
               $innoScript += "OutputDir=../../SignOutput`r`n"
@@ -885,6 +886,10 @@ jobs:
               $innoScript += "SolidCompression=yes`r`n"
               $innoScript += "ArchitecturesInstallIn64BitMode=x64`r`n"
               $innoScript += "PrivilegesRequired=admin`r`n"
+              $innoScript += "VersionInfoVersion=$version`r`n"
+              $innoScript += "UninstallDisplayName=$myappname`r`n"
+              $innoScript += "UsePreviousAppDir=yes`r`n"
+              $innoScript += "AllowNoIcons=yes`r`n"
               $innoScript += "`r`n[Files]`r`n"
               $innoScript += "Source: `"../../rustdesk/$myappname.exe`"; DestDir: `"{app}`"; Flags: ignoreversion`r`n"
               $innoScript += "Source: `"../../rustdesk/*.dll`"; DestDir: `"{app}`"; Flags: ignoreversion`r`n"
@@ -897,6 +902,18 @@ jobs:
               $innoScript += "Name: `"desktopicon`"; Description: `"Create a desktop shortcut`"; GroupDescription: `"Additional shortcuts:`"; Flags: unchecked`r`n"
               $innoScript += "`r`n[Run]`r`n"
               $innoScript += "Filename: `"{app}\$myappname.exe`"; Description: `"Launch $myappname`"; Flags: nowait postinstall skipifsilent`r`n"
+              $innoScript += "`r`n[UninstallDelete]`r`n"
+              $innoScript += "Type: filesandordirs; Name: `"{app}`"`r`n"
+              $innoScript += "`r`n[Code]`r`n"
+              $innoScript += "function InitializeSetup(): Boolean;`r`n"
+              $innoScript += "var`r`n"
+              $innoScript += "  ResultCode: Integer;`r`n"
+              $innoScript += "begin`r`n"
+              $innoScript += "  // Kill any running instances before installation`r`n"
+              $innoScript += "  if Exec('taskkill', '/F /IM `"$myappname.exe`" /T', '', SW_HIDE, ewWaitUntilTerminated, ResultCode) then`r`n"
+              $innoScript += "    Log('Terminated running $myappname processes');`r`n"
+              $innoScript += "  Result := True;`r`n"
+              $innoScript += "end;`r`n"
               
               $innoScript | Out-File -FilePath "setup.iss" -Encoding UTF8
               Write-Host "Created Inno Setup script"
