--- a/.github/workflows/generator-android.yml
+++ b/.github/workflows/generator-android.yml
@@ -500,7 +500,7 @@ jobs:
 
       - name: disable settings
         continue-on-error: true
-        if: fromJson(inputs.custom)['disable-settings'] == 'Y'
+        if: inputs.custom != '' && contains(inputs.custom, 'disable-settings') && contains(inputs.custom, 'Y')
         shell: bash
         run: |
           echo "Applying disable settings patch..."
