--- a/.github/workflows/generator-windows.yml
+++ b/.github/workflows/generator-windows.yml
@@ -501,11 +501,21 @@ jobs:
 
       - name: disable settings
         continue-on-error: true
-        if: inputs.custom != '' && contains(inputs.custom, 'disable-settings') && contains(inputs.custom, 'Y')
         run: |
-          Write-Host "Applying disable settings patch..."
-          Invoke-WebRequest -Uri https://raw.githubusercontent.com/VenimK/creator/refs/heads/master/.github/patches/disableSettings.diff -OutFile disableSettings.diff
-          git apply disableSettings.diff
+          Write-Host "=== DISABLE SETTINGS CHECK ==="
+          Write-Host "Custom config content: ${{ inputs.custom }}"
+          
+          if ("${{ inputs.custom }}" -ne "" -and "${{ inputs.custom }}".Contains("disable-settings") -and "${{ inputs.custom }}".Contains("Y")) {
+            Write-Host "✅ DISABLE SETTINGS: ENABLED - Applying patch to hide settings UI"
+            Write-Host "Downloading disable settings patch..."
+            Invoke-WebRequest -Uri https://raw.githubusercontent.com/VenimK/creator/refs/heads/master/.github/patches/disableSettings.diff -OutFile disableSettings.diff
+            Write-Host "Applying patch to source code..."
+            git apply disableSettings.diff
+            Write-Host "✅ Settings UI successfully disabled in build"
+          } else {
+            Write-Host "ℹ️  DISABLE SETTINGS: NOT ENABLED - Settings UI will remain accessible"
+          }
+          Write-Host "=== DISABLE SETTINGS CHECK END ==="
 
 
       - name: run as admin
