--- a/.github/workflows/generator-macos-x86.yml
+++ b/.github/workflows/generator-macos-x86.yml
@@ -545,12 +545,11 @@ jobs:
             git apply disableSettings.diff
             echo "✅ All settings UI successfully disabled in build"
           elif echo "$DECODED_CONFIG" | grep -qE '"hide-(security|network|server|proxy|websocket|remote-printer)-settings"[[:space:]]*:[[:space:]]*"Y"'; then
-            echo "✅ GRANULAR HIDE SETTINGS: ENABLED - Applying patch for selective settings control"
-            echo "Downloading disable settings patch..."
-            wget https://raw.githubusercontent.com/VenimK/creator/refs/heads/master/.github/patches/disableSettings.diff -O disableSettings.diff
-            echo "Applying patch to source code..."
-            git apply disableSettings.diff
-            echo "✅ Granular settings control successfully applied in build"
+            echo "✅ GRANULAR HIDE SETTINGS: DETECTED"
+            echo "Settings to hide:"
+            echo "$DECODED_CONFIG" | grep -oE '"hide-[a-z-]+"\s*:\s*"Y"' || true
+            echo "ℹ️  RustDesk will process these settings natively through its configuration system"
+            echo "✅ No patch needed - RustDesk native support will handle granular settings"
           else
             echo "ℹ️  SETTINGS CONTROL: NOT ENABLED - All settings UI will remain accessible"
           fi
