--- a/.github/workflows/generator-android.yml
+++ b/.github/workflows/generator-android.yml
@@ -521,10 +521,11 @@ jobs:
             echo "✅ GRANULAR HIDE SETTINGS: DETECTED"
             echo "Settings to hide:"
             echo "$DECODED_CONFIG" | grep -oE '"hide-[a-z-]+"\s*:\s*"Y"' || true
-            echo "Downloading granular hide settings patch..."
-            wget https://raw.githubusercontent.com/VenimK/creator/refs/heads/master/.github/patches/hideGranularSettings.diff -O hideGranularSettings.diff
-            echo "Applying patch to permanently hide selected settings tabs..."
-            git apply hideGranularSettings.diff
+            echo "Downloading hide settings script..."
+            wget https://raw.githubusercontent.com/VenimK/creator/refs/heads/master/.github/scripts/hide_granular_settings.sh -O hide_granular_settings.sh
+            chmod +x hide_granular_settings.sh
+            echo "Running script to permanently hide selected settings tabs..."
+            ./hide_granular_settings.sh
             echo "✅ Granular settings permanently hidden in source code"
           else
             echo "ℹ️  SETTINGS CONTROL: NOT ENABLED - All settings UI will remain accessible"
